main.html / myPage.html / writeForm.html 완성

--- a/teamPrj/src/main/resources/templates/main.html
+++ b/teamPrj/src/main/resources/templates/main.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<h1>Main Page</h1>
+<hr>
+<a href="myPage?mno=${dto.mno }">마이페이지</a> <a href="writeForm">게시글쓰기</a> <a href="noticeList">게시판가기</a>
 </body>
 </html>
