--- a/teamPrj/src/main/resources/templates/writeForm.html
+++ b/teamPrj/src/main/resources/templates/writeForm.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<h1>Write Form</h1>
+<hr>
+<form action="write" method="post">
+    <input type="text" name="title" placeholder="제목을 입력하세요...."><br>
+    <textarea name="content" placeholder="내용을 입력하세요...." rows="8"></textarea><br>
+    <input type="submit" value="등록하기">
+</form>
 </body>
 </html>
