--- a/teamPrj/src/main/resources/templates/login.html
+++ b/teamPrj/src/main/resources/templates/login.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<h1>로그인 페이지</h1>
+	<hr>
+	<form action="login" method="get">
+		ID : <input type="text" name="id"><br>
+		PW : <input type="text" name="pw"><br>
+		<input type="submit" value="로그인">
+	</form> 
 </body>
 </html>
