--- a/teamPrj/src/main/resources/templates/writeForm.html
+++ b/teamPrj/src/main/resources/templates/writeForm.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Write Form</h1>
+<h1>게시글 작성 페이지</h1>
 <hr>
 <form action="write" method="post">
     <input type="text" name="title" placeholder="제목을 입력하세요...."><br>
