--- a/teamPrj/src/main/resources/templates/login.html
+++ b/teamPrj/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>로그인 페이지</h1>
 	<hr>
-	<form action="login" method="get">
+	<form action="loginDo" method="get">
 		ID : <input type="text" name="id"><br>
 		PW : <input type="text" name="pw"><br>
 		<input type="submit" value="로그인">
