Mypage 회원정보 구현,  getMyList 작성글 목록 구현

--- a/teamPrj/src/main/resources/templates/main.html
+++ b/teamPrj/src/main/resources/templates/main.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Main Page</h1>
 <hr>
-<a href="myPage?mno=${dto.mno }">마이페이지</a> <a href="writeForm">게시글쓰기</a> <a href="noticeList">게시판가기</a>
+<a href="myPage">마이페이지</a> <a href="writeForm">게시글쓰기</a> <a href="noticeList">게시판가기</a>
 
 <h3 th:text="${session.name + ' 님 반갑습니다.'}"></h3> 
 </body>
