getList Dao 기능 생성 , noticeList 페이지 수정 완료

--- a/teamPrj/src/main/resources/templates/myPage.html
+++ b/teamPrj/src/main/resources/templates/myPage.html
@@ -36,7 +36,7 @@
 			<tr th:each="list, status : ${myList}">
 				<td>[[${list.num}]]</td>
 				<td><a th:href="@{detail(num=${list.num})}">[[${list.title}]]</a></td>
-				<td>[[${list.regdate}]]</td>
+				<td>[[${list.regidate}]]</td>
 			</tr>
 		</tbody>
 	</table>
