--- a/teamPrj/src/main/resources/templates/detail.html
+++ b/teamPrj/src/main/resources/templates/detail.html
@@ -10,16 +10,15 @@
 	<table border="1" width="500" cellpadding="0" cellspacing="0" style="text-align: center;">
 		<thead>
 			<tr>
-				<th>순번</th><th>제목</th><th>내용</th><th>작성일</th><th>작성자</th>
+				<th>순번</th><th>제목</th><th>내용</th><th>작성일</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="dto, status : ${list}">
+			<tr th:each="dto, status : ${dto}">
 				<td>[[${status.count }]]</td>
 				<td>[[${dto.title}]]</td>
 				<td>[[${dto.content}]]</td>
-				<td>[[${dto.regdate}]]</td>
-				<td>[[${dto.name}]]</td>
+				<td>[[${dto.regidate}]]</td>
 			</tr>
 		</tbody>
 	</table>
