날짜 형식 수정, 시작페이지를 로그인페이지로 설정

--- a/teamPrj/src/main/resources/templates/login.html
+++ b/teamPrj/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 	<hr>
 	<form action="loginDo" method="get">
 		ID : <input type="text" name="id"><br>
-		PW : <input type="text" name="pw"><br>
+		PW : <input type="password" name="pw"><br>
 		<input type="submit" value="로그인">
 	</form> 
 </body>
