--- a/teamPrj/src/main/resources/templates/myPage.html
+++ b/teamPrj/src/main/resources/templates/myPage.html
@@ -40,6 +40,22 @@
 			</tr>
 		</tbody>
 	</table>
+	
+	<h3>나에게 쓴 게시글</h3>
+	<table border="1" width="500" cellpadding="0" cellspacing="0" style="text-align: center;">
+		<thead>
+			<tr>
+				<th>순번</th><th>제목</th><th>작성일</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="list, status : ${secretList}">
+				<td>[[${list.mno}]]</td>
+				<td><a th:href="@{detail(mno=${list.mno})}">[[${list.title}]]</a></td>
+				<td>[[${list.regidate}]]</td>
+			</tr>
+		</tbody>
+	</table>
 
 </body>
 </html>
