--- a/teamPrj/src/main/resources/templates/writeForm.html
+++ b/teamPrj/src/main/resources/templates/writeForm.html
@@ -8,9 +8,9 @@
 <h1>게시글 작성 페이지</h1>
 <hr>
 <form action="write" method="post">
-	<input type="text" name="id" placeholder="지정할 사람의 아이디를 입력하세요....">없으면 비워주세요.<br>
-    <input type="text" name="title" placeholder="제목을 입력하세요...."><br>
-    <textarea name="content" placeholder="내용을 입력하세요...." rows="8"></textarea><br>
+	<input type="text" name="id" placeholder="지정할 사람의 아이디를 입력하세요.... " >없으면 비워주세요.<br>
+    <input type="text" name="title" placeholder="제목을 입력하세요...."required><br>
+    <textarea name="content" placeholder="내용을 입력하세요...." rows="8"required></textarea><br>
     <input type="submit" value="등록하기">
 </form>
 </body>
