--- a/teamPrj/src/main/resources/templates/login.html
+++ b/teamPrj/src/main/resources/templates/login.html
@@ -3,13 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style>
+    input[type="submit"]{
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+    }
+    input[type="submit"]:hover{
+        background-color: #0056b3;
+    }
+</style>
 </head>
 <body>
 	<h1>로그인 페이지</h1>
 	<hr>
 	<form action="loginDo" method="get">
-		ID : <input type="text" name="id"><br>
-		PW : <input type="password" name="pw"><br>
+		<input type="text" name="id" placeholder="id"><br>
+		<input type="password" name="pw" placeholder="pw"><br>
 		<input type="submit" value="로그인">
 	</form> 
 </body>
