--- a/teamPrj/src/main/resources/templates/detail.html
+++ b/teamPrj/src/main/resources/templates/detail.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>게시글 상세 페이지</h1>
+	<a href="myPage">마이페이지</a> <a href="writeForm">게시글쓰기</a> <a href="noticeList">게시판가기</a>
 	<hr>
 	<table border="1" width="500" cellpadding="0" cellspacing="0" style="text-align: center;">
 		<thead>
