--- a/teamPrj/src/main/resources/templates/writeForm.html
+++ b/teamPrj/src/main/resources/templates/writeForm.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>게시글 작성 페이지</h1>
+<a href="myPage">마이페이지</a> <a href="writeForm">게시글쓰기</a> <a href="noticeList">게시판가기</a>
 <hr>
 <form action="write" method="post">
 	<input type="text" name="id" placeholder="지정할 사람의 아이디를 입력하세요....">없으면 비워주세요.<br>
